<?xml version="1.0"?>
<package format="3">
    <name>map_msgs</name>
    <version>1.0.0</version>
    <description>
        A package for defining commonly used mapping messages.
    </description>

    <maintainer email="arda.mulayim@outlook.com">Robot Team</maintainer>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

